allow user selectable format for Binary displays